--- a/data/theme/default/recommend_article.html
+++ b/data/theme/default/recommend_article.html
@@ -10,8 +10,8 @@
       <ul class="picList">
 {list status=3 num=10 cache=36000 }
         <li>
-          <div class="pic"><a href="{$xiao['url']}"><img src="{function.thumb($xiao[thumb])}" /></a></div>
-          <div class="title"><a href="{$xiao['url']}">{function.strcut($xiao[title], 24)}</a></div>
+          <div class="pic"><a href="{$vdata['url']}"><img src="{function.thumb($vdata[thumb])}" /></a></div>
+          <div class="title"><a href="{$vdata['url']}">{function.strcut($vdata[title], 24)}</a></div>
         </li>
 {/list}
       </ul>
