--- a/data/theme/default/show_article.html
+++ b/data/theme/default/show_article.html
@@ -28,7 +28,7 @@
                 <div class="bg">
                     <h2>评论列表</h2>
                     {list table=form_comment cid=$id order=time}
-                    <div>{$xiao[content]}</div>
+                    <div>{$vdata[content]}</div>
                     {/list}
                 </div>
                 <div class="blank20 clear"></div>
