--- a/data/theme/test/header.html
+++ b/data/theme/test/header.html
@@ -32,7 +32,7 @@
     <ul id="nav" class="container clearfix">
       <li class="nav-item"><h3><a href="{$site_url}">Home</a></h3></li>
 {nav num=7}
-      <li class="nav-item{if $current} on{/if}"><h3><a href="{$xiao['url']}">{$xiao['catname']}</a></h3></li>
+      <li class="nav-item{if $current} on{/if}"><h3><a href="{$vdata['url']}">{$vdata['catname']}</a></h3></li>
 {/nav}
     </ul>
   </div>
