--- a/data/theme_mobile/default/category_product.html
+++ b/data/theme_mobile/default/category_product.html
@@ -13,8 +13,8 @@
 			    <ul class="noborder">
                 {list catid=$catid page=$page cache=36000}
             <li>
-            <div><a href="{$xiao['url']}"><img src="{function.thumb($xiao[thumb])}" /></a></div>
-            <div class="picname"><a href="{$xiao['url']}">{$xiao['title']}</a></div>
+            <div><a href="{$vdata['url']}"><img src="{function.thumb($vdata[thumb])}" /></a></div>
+            <div class="picname"><a href="{$vdata['url']}">{$vdata['title']}</a></div>
             </li>
                 {/list}
 
