--- a/data/theme_mobile/default/left.html
+++ b/data/theme_mobile/default/left.html
@@ -12,7 +12,7 @@
   <div class="leftbox">
    <ul>
 {nav parentid=5 }
-    <li><s></s><a {if $current}class="select"{/if} href="{$xiao['url']}">{$xiao['catname']}</a></li>
+    <li><s></s><a {if $current}class="select"{/if} href="{$vdata['url']}">{$vdata['catname']}</a></li>
 {/nav}
    </ul>
   </div>
