--- a/data/theme/default/footer.html
+++ b/data/theme/default/footer.html
@@ -2,7 +2,7 @@
     <div class="footer">
         <div class="container footnav">
 {nav  }
-            <a href="{$xiao['url']}">{$xiao['catname']}</a>
+            <a href="{$vdata['url']}">{$vdata['catname']}</a>
 {/nav}
         </div>
         <div class="container corporation">2018  &copy; <a href="{$site_url}">uinote.com</a> | <a href="https://crogram.com" target="_blank" title="Powered by Crogram,Inc.">crogram.com</a></div>
