--- a/data/theme/test/bookmark_list.html
+++ b/data/theme/test/bookmark_list.html
@@ -11,7 +11,7 @@
    <div class="newslist">
     <ul class="noborder">
 {list catid=$catid page=$page cache=36000}
-     <li><span class="date">{function.date("Y-m-d", $xiao['time'])}</span> <a href="{$xiao['url']}">· {$xiao['title']}</a></li>
+     <li><span class="date">{function.date("Y-m-d", $vdata['time'])}</span> <a href="{$vdata['url']}">· {$vdata['title']}</a></li>
 {/list}
     </ul>
     {$pagination}
