--- a/data/theme_mobile/default/category_article.html
+++ b/data/theme_mobile/default/category_article.html
@@ -37,11 +37,11 @@ $(document).ready(function(){
  <div id="deals">
     <input name="list_id" id="list_id" type="hidden" value="1">
 {nav  parentid=$catid typeid=1}
-<h3><span class="bt">{$xiao['catname']}</span> <span class="more"><a href="{$xiao['url']}">更多&gt;&gt;</a></span></h3>
-{list catid=$xiao[catid] num=3 order=time}
+<h3><span class="bt">{$vdata['catname']}</span> <span class="more"><a href="{$vdata['url']}">更多&gt;&gt;</a></span></h3>
+{list catid=$vdata[catid] num=3 order=time}
 <section class="news">
-<a href="{$xiao['url']}">
-    <detail><ul><li class="brand">{$xiao['title']}</li></ul></detail>
+<a href="{$vdata['url']}">
+    <detail><ul><li class="brand">{$vdata['title']}</li></ul></detail>
 </a>
 </section>
 {/list}
@@ -53,14 +53,14 @@ $(document).ready(function(){
  <input name="list_id" id="list_id" type="hidden" value="1">
  <ul class="tabs" style="margin-top: 0">
 {nav  parentid=$catid typeid=1}
-  <li><a href="{$xiao['url']}">{$xiao['catname']}</a></li>
+  <li><a href="{$vdata['url']}">{$vdata['catname']}</a></li>
 {/nav}
  </ul>
  <br class="clear" />
  <div class="flexslider2"><ul class="slides"></ul></div>
  <ul class="newsconlist">
-{list catid=$xiao[catid] num=3 order=time}
-   <li><a href="{$xiao['url']}">{$xiao['title']}</a></li>
+{list catid=$vdata[catid] num=3 order=time}
+   <li><a href="{$vdata['url']}">{$vdata['title']}</a></li>
 {/list}
  </ul>
 
