--- a/data/theme_mobile/test/member/list.html
+++ b/data/theme_mobile/test/member/list.html
@@ -15,7 +15,7 @@
                     <td>
 					<select name="catid">
                     {nav  }
-                    <option value="{$xiao['catid']}">{$xiao['catname']}</option>
+                    <option value="{$vdata['catid']}">{$vdata['catname']}</option>
                     {/nav}
 					</select>
 					<input type="submit" class="button" value="发布文档" name="submit">
