--- a/data/theme/test/member/index.html
+++ b/data/theme/test/member/index.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="mainbody">
+<div class="warp">
 	<div class="w210 fl">
 	{template member/sidebar.html}
 	</div>
