--- a/data/theme/test/member/register.html
+++ b/data/theme/test/member/register.html
@@ -12,7 +12,7 @@ function checkpass() {
 	}
 }
 </script>
-<div  class="mainbody">
+<div  class="warp">
 	<form method="post" action="" name="myform" id="myform">
 	<div class="bg ">
 	<table width="100%" class="table_form ">
