--- a/data/theme_mobile/default/form.html
+++ b/data/theme_mobile/default/form.html
@@ -1,7 +1,7 @@
 {template head.html}
 {template header.html}
 <div class="blank10 clear"></div>
-<div class="mainbody ">
+<div class="warp ">
  <div class=" bg">
   <div class="newstitle">您当前位置：<a  href="{$site_url}">首页</a> >> {$form_name} </div>
   <div class="item-list">
