--- a/data/theme/default/index.html
+++ b/data/theme/default/index.html
@@ -1,6 +1,6 @@
 {template header.html}
 
-<div class="mainbody category-card">
+<div class="warp category-card">
  <div class="container">
 {nav  }
   <div class="newwarp bg">
