--- a/data/theme/default/member/content_add.html
+++ b/data/theme/default/member/content_add.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="/static/js/dialog.js?skin=green"></script>
 <script type="text/javascript" src="/static/js/admin.js"></script>
 
-<div class="mainbody">
+<div class="warp">
     <div class="container">
         <div class="w210 fl">
 {template member/sidebar.html}
