--- a/data/theme/default/member/index.html
+++ b/data/theme/default/member/index.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="mainbody member">
+<div class="warp member">
 	<div class="container">
 		<div class="w210 fl">
 		{template member/sidebar.html}
