--- a/data/theme/default/post.html
+++ b/data/theme/default/post.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="/static/js/admin.js"></script>
 {/if}
 
-<div class="mainbody">
+<div class="warp">
     <div class="post bg">
         {template crumbs.html}
         <form action="" method="post">
