--- a/data/theme/test/category_download.html
+++ b/data/theme/test/category_download.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="mainbody category-list">
+<div class="warp category-list">
  <div class="w210 fl">
 {template sidebar.html}
  </div>
