--- a/data/theme/test/list_article.html
+++ b/data/theme/test/list_article.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="mainbody article-list">
+<div class="warp article-list">
  <div class="w210 fl">
 {template sidebar.html}
  </div>
