--- a/data/theme/test/show_product.html
+++ b/data/theme/test/show_product.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="mainbody">
+<div class="warp">
   <div class="container">
     <div class="w210 fr">
       {template sidebar.html}
