--- a/data/theme_mobile/default/category_product.html
+++ b/data/theme_mobile/default/category_product.html
@@ -1,11 +1,11 @@
 {template header.html}
-<div class="mainbody">
+<div class="warp">
 	<div class="w210 fl">
 	{template left.html}
 	</div>
 	<div class="w740 fr">
 		<div class="page bg">
-		<div class="newstitle">您当前位置：<a  href="{$site_url}">首页</a> >> {function.position($catid, ' &gt;&gt;&nbsp;&nbsp;')}</div>
+		<div class="newstitle">您当前位置：<a href="{$site_url}">首页</a> >> {function.position($catid, ' &gt;&gt;&nbsp;&nbsp;')}</div>
 		<div class="blank10 clear"></div>
 
             <!--列表开始-->
