--- a/data/theme_mobile/default/post.html
+++ b/data/theme_mobile/default/post.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="admin/js/admin.js"></script>
 
  <div class="blank10 clear"></div>
- <div class="mainbody">
+ <div class="warp">
  <div class="bg" style="padding:20px;">
 {if $select}
 <!--选择栏目的模板-->
