--- a/data/theme_mobile/default/show_product.html
+++ b/data/theme_mobile/default/show_product.html
@@ -1,6 +1,6 @@
 {template head.html}
 {template header.html}
-<div class="mainbody">
+<div class="warp">
  <div class="w210 fl">
 {template left.html}
  </div>
