--- a/data/theme_mobile/test/member/add.html
+++ b/data/theme_mobile/test/member/add.html
@@ -2,7 +2,7 @@
 
 {template member/header.html}
 
-<div class="mainbody">
+<div class="warp">
     <div class="w210 fl">
     {template member/left.html}
     </div>
