--- a/data/theme/default/footer.html
+++ b/data/theme/default/footer.html
@@ -5,7 +5,7 @@
             <a href="{$vdata['url']}">{$vdata['catname']}</a>
 {/nav}
         </div>
-        <div class="container corporation">2018  &copy; <a href="{$site_url}">uinote.com</a> | <a href="https://crogram.com" target="_blank" title="Powered by Crogram,Inc.">crogram.com</a></div>
+        <div class="container corporation">2018  &copy; <a href="{$site_url}">uinote.com</a> | <a href="https://doufox.com" target="_blank" title="A member of Crogram, Inc.">doufox.com</a></div>
         <div class="container corporation">{block 1}</div>
     </div>
 </body>
