pate_position > page_position

--- a/data/theme/default/crumbs.html
+++ b/data/theme/default/crumbs.html
@@ -1,4 +1,4 @@
 
 <div class="crumbs">
-  <a href="{$site_url}">Home</a>&nbsp;&gt;&nbsp;{if $catid}{function.position($catid, '&gt;&nbsp;&nbsp;')}{else}{$pate_position}{/if}
+  <a href="{$site_url}">Home</a>&nbsp;&gt;&nbsp;{if $catid}{function.position($catid, '&gt;&nbsp;&nbsp;')}{else}{$page_position}{/if}
 </div>
