onShow>show-tips $string>$configTips

--- a/data/theme/default/post.html
+++ b/data/theme/default/post.html
@@ -33,7 +33,7 @@
             <div>
                 <div><font color="red">*</font>&nbsp;{$model['content']['title']['name']}：</div>
                 <div><input type="text" class="input-text" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="get_kw()"></div>
-                <div class="onShow" id="title_text"></div>
+                <div class="show-tips" id="title_text"></div>
             </div>
     {/if}
 
