--- a/data/theme_mobile/default/member/add.html
+++ b/data/theme_mobile/default/member/add.html
@@ -24,7 +24,7 @@
                     &nbsp;
                     <span>{$model['content']['title']['name']}:</span>
                     <input type="text" class="input-tag" id="title" name="data[title]" value="{$data['title']}"  onBlur="ajaxtitle()" placeholder="{$model['content']['title']['name']}" />
-                    <div class="onShow" id="title_text"></div>
+                    <div class="show-tips" id="title_text"></div>
                 </div>
             </div>
             {/if}
