--- a/data/theme/default/member/content_add.html
+++ b/data/theme/default/member/content_add.html
@@ -33,7 +33,7 @@
                                 <font color="red">*</font>&nbsp;{$model['content']['title']['name']}：</th>
                             <td>
                                 <input type="text" class="input-text" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="ajaxtitle()">
-                                <div class="onShow" id="title_text"></div>
+                                <div class="show-tips" id="title_text"></div>
                             </td>
                         </tr>
 {/if} {$data_fields}
