--- a/data/theme/default/list_article.html
+++ b/data/theme/default/list_article.html
@@ -1,24 +1,23 @@
 {template header.html}
-<div class="warp article-list">
- <div class="w210 fl">
-{template sidebar.html}
- </div>
-  <div class="w740 fr">
-  <div class="page bg">
-    {template crumbs.html}
-<!--列表开始-->
-   <div class="newslist">
-    <ul class="noborder">
-{list catid=$catid page=$page cache=36000}
-     <li><span class="date">{function.date("Y-m-d", $vdata['time'])}</span> <a href="{$vdata['url']}">· {$vdata['title']}</a></li>
-{/list}
-    </ul>
-    {$pagination}
-   </div>
-<!--列表结束-->
-   </div>
-  <div class="clear"></div>
- </div>
- <div class="blank10 clear"></div>
-</div>
+
+    <div class="warp">
+        <div class="container">
+            <div class="w210 fl">{template sidebar.html}</div>
+            <div class="w740 fr bg">
+                {template crumbs.html}
+                <div class="">
+                    <ul class="article-list">
+                    {list catid=$catid page=$page cache=36000}
+                    <li>
+                        <span class="date">{function.date("Y-m-d", $vdata['time'])}</span>
+                        <a href="{$vdata['url']}">· {$vdata['title']}</a>
+                    </li>
+                    {/list}
+                    </ul>
+                    {$pagination}
+                </div>
+            </div>
+        </div>
+    </div>
+
 {template footer.html}
