--- a/data/theme/default/bookmark_show.html
+++ b/data/theme/default/bookmark_show.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="warp">
+<div class="main">
   <div class="container">
     <div class="w210 fr">
       {template sidebar.html}
