--- a/data/theme/default/member/login.html
+++ b/data/theme/default/member/login.html
@@ -5,7 +5,7 @@
     }
 </script>
 
-<div class="warp">
+<div class="main">
     <div class="container bg">
         {template crumbs.html}
         <form action="" method="post">
