--- a/data/theme/default/member/register.html
+++ b/data/theme/default/member/register.html
@@ -16,7 +16,7 @@ function reload_code() {
 }
 </script>
 
-<div class="warp">
+<div class="main">
 	<div class="container bg">
 		{template crumbs.html}
 		<form method="post" action="" name="myform" id="myform">
