--- a/data/theme/default/show_article.html
+++ b/data/theme/default/show_article.html
@@ -1,5 +1,5 @@
 {template header.html}
-    <div class="warp">
+    <div class="main">
         <div class="container bg">
             {template crumbs.html}
             <div class="article">
