--- a/data/theme/test/index.html
+++ b/data/theme/test/index.html
@@ -1,6 +1,6 @@
 {template header.html}
 <div class="blank5 clear"></div>
-<div class="warp category-card">
+<div class="main category-card">
  <div class="container">
 {nav  }
   <div class="newwarp bg">
