--- a/data/theme/test/member/add.html
+++ b/data/theme/test/member/add.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">var sitepath = "index.php";</script>
 <script type="text/javascript" src="admin/js/admin.js"></script>
 
-<div class="warp">
+<div class="main">
 	    <div class="w210 fl">
 		{template member/sidebar.html}
         </div>
