--- a/data/theme/default/category_article.html
+++ b/data/theme/default/category_article.html
@@ -1,6 +1,6 @@
 {template header.html}
 
-<div class="warp">
+<div class="main">
     <div class="container">
         <div class="w210 fl">
             {template sidebar.html}
