--- a/data/theme/test/form.html
+++ b/data/theme/test/form.html
@@ -1,6 +1,6 @@
 {template header.html}
 <div class="blank10 clear"></div>
-<div class="warp ">
+<div class="main ">
  <div class=" bg">
   <div class="crumbs"><a href="{$site_url}">Home</a>&nbsp;>>&nbsp;{$form_name}</div>
   <div class="item-list">
