--- a/data/theme/test/member/login.html
+++ b/data/theme/test/member/login.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="warp">
+<div class="main">
  <div class="bg" >
   <form  action="" method="post" >
   <table width="100%" class="table_form">
