--- a/data/theme/test/member/password.html
+++ b/data/theme/test/member/password.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="warp">
+<div class="main">
 	    <div class="w210 fl">
 		{template member/sidebar.html}
         </div>
