--- a/data/theme/test/show_article.html
+++ b/data/theme/test/show_article.html
@@ -1,5 +1,5 @@
 {template header.html}
-<div class="warp">
+<div class="main">
   <div class="container">
     <div class="page bg">
       {template crumbs.html}
