--- a/data/theme/test/member/add.html
+++ b/data/theme/test/member/add.html
@@ -1,8 +1,7 @@
 {template header.html}
-<link href="admin/img/admin.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="admin/js/dialog.js?skin=green"></script>
-<script type="text/javascript">var sitepath = "index.php";</script>
-<script type="text/javascript" src="admin/js/admin.js"></script>
+<link href="/static/css/admin.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/static/js/dialog.js?skin=green"></script>
+<script type="text/javascript" src="/static/js/admin.js"></script>
 
 <div class="main">
 	    <div class="w210 fl">
