--- a/data/theme/default/post.html
+++ b/data/theme/default/post.html
@@ -1,6 +1,5 @@
 {template header.html} {if !$select}
     <script type="text/javascript">
-        var sitepath = "index.php";
         function reload_code() {
             document.getElementById('code').src = '{function.url("api/access/checkcode", array("width"=>80, "height"=>28))}&' + Math.random();
         }
@@ -32,7 +31,7 @@
     {if $model['content']['title']['show']}
             <div>
                 <div><font color="red">*</font>&nbsp;{$model['content']['title']['name']}：</div>
-                <div><input type="text" class="input-text" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="get_kw()"></div>
+                <div><input type="text" class="input-text" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="admin_command.get_kw()"></div>
                 <div class="show-tips" id="title_text"></div>
             </div>
     {/if}
