--- a/data/theme/default/footer.html
+++ b/data/theme/default/footer.html
@@ -1,11 +1,8 @@
 <div class="footer">
-    <div class="container footnav">
-{nav  }
-        <a href="{$vdata['url']}">{$vdata['catname']}</a>
-{/nav}
+    <div class="container">
+        <p><a href="{$site_url}">{$site_name}</a> | <a href="https://doufox.com" target="_blank" title="A member of Crogram, Inc.">doufox.com</a></p>
+        <p>&copy; CopyRight 2018 All Rights Reserved.</p>
     </div>
-    <div class="container corporation">2018  &copy; <a href="{$site_url}">uinote.com</a> | <a href="https://doufox.com" target="_blank" title="A member of Crogram, Inc.">doufox.com</a></div>
-    <div class="container corporation">{block 1}</div>
 </div>
 </body>
 </html>
