--- a/data/theme/default/footer.html
+++ b/data/theme/default/footer.html
@@ -1,6 +1,13 @@
 <div class="footer">
     <div class="container">
-        <p><a href="{$site_url}">{$site_name}</a> | <a href="https://doufox.com" target="_blank" title="A member of Crogram, Inc.">doufox.com</a></p>
+        <p>
+            <a href="{$site_url}">网站首页</a>-
+            <a href="{function.url('index/about')}">关于我们</a>-
+            <a href="{function.url('index/contact')}">联系我们</a>-
+            <a href="{function.url('index/sitemap')}">网站地图</a>-
+            <a href="{function.url('index/feedback')}">投诉建议</a>-
+            <a href="{function.url('index/post')}">在线投稿</a>
+        </p>
         <p>&copy; CopyRight 2018 All Rights Reserved.</p>
     </div>
 </div>
