--- a/data/theme/default/sitemap.html
+++ b/data/theme/default/sitemap.html
@@ -2,9 +2,12 @@
 
 <div class="main sitemap">
     <div class="container">
-        {nav  }
-            <a href="{$vdata['url']}">{$vdata['catname']}</a>
-        {/nav}
+        {template crumbs.html}
+        <ul>
+            {nav  }
+                <li><a href="{$vdata['url']}">{$vdata['catname']}</a></li>
+            {/nav}
+        </ul>
     </div>
 </div>
 {template footer.html}
