--- a/data/theme/default/footer.html
+++ b/data/theme/default/footer.html
@@ -9,6 +9,7 @@
             <a href="{function.url('index/post')}">在线投稿</a>
         </p>
         <p>&copy; CopyRight 2018 All Rights Reserved.</p>
+        <p>{$app_execution_time}</p>
     </div>
 </div>
 </body>
