udpate bootstrap theme

--- a/data/theme/bootstrap/forum_show.html
+++ b/data/theme/bootstrap/forum_show.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="media-body">
-            <h4 class="media-heading">$title</h4>
+            <h4 class="media-heading">{$title}</h4>
             <div class="content">
                 {$content}
             </div>
