--- a/data/theme/bootstrap/footer.html
+++ b/data/theme/bootstrap/footer.html
@@ -14,5 +14,6 @@
     </div>
 </div>
 <script src="static/js/jquery.min.js"></script>
+<script src="static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
