--- a/data/theme/bootstrap/member/content_add.html
+++ b/data/theme/bootstrap/member/content_add.html
@@ -7,37 +7,36 @@
 {template member/member_nav.html}
 
 <div class="row">
-    <div class="col-sm-3 col-md-3 col-xs-3">
+    <div class="col-sm-3 col-md-3 col-xs-4">
         {template member/sidebar.html}
     </div>
-    <div class="col-sm-8 col-md-8 col-xs-8">
+    <div class="col-sm-9 col-md-9 col-xs-8">
         <form action="" method="post">
             {if $data}
             <input type="hidden" value="{$data[catid]}" name="data[catid]">{/if}
-            <table width="100%" class="table_form" border="0" cellpadding="0" cellspacing="0">
+            <table class="table table-bordered">
                 <tbody>
                     <tr>
                         <th width="80">
                             <font color="red">*</font>&nbsp;栏目：</th>
                         <td>
-                            <select name="data[catid]">{$category}</select>
+                            <select class="form-control" name="data[catid]">{$category}</select>
                         </td>
                     </tr>
-
                     {if $model['content']['title']['show']}
                     <tr>
                         <th>
                             <font color="red">*</font>&nbsp;{$model['content']['title']['name']}：</th>
                         <td>
-                            <input type="text" class="input-text" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="ajaxtitle()">
+                            <input type="text" class="form-control" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="ajaxtitle()">
                             <div class="show-tips" id="title_text"></div>
                         </td>
                     </tr>
                     {/if} {$data_fields}
                     <tr>
-                        <th style="border:none">&nbsp;</th>
-                        <td style="border:none">
-                            <input type="submit" class="button" value="提 交" name="submit">
+                        <th>&nbsp;</th>
+                        <td>
+                            <button type="submit" name="submit" class="btn btn-default">提交</button>
                         </td>
                     </tr>
                 </tbody>
