--- a/data/theme/bootstrap/member/login.html
+++ b/data/theme/bootstrap/member/login.html
@@ -33,7 +33,7 @@
     <div class="form-group form-inline">
         <div class="col-sm-2 control-label"></div>
         <div class="col-sm-10">
-            <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-user"></i> 登录</button>
+            <button type="submit" name="submit" class="btn btn-default"><i class="glyphicon glyphicon-user"></i> 登录</button>
             <span style="padding-left:20px">
                 <a href="#" onclick="return false">忘记密码？</a>
             </span>
