--- a/data/theme/bootstrap/member/member_nav.html
+++ b/data/theme/bootstrap/member/member_nav.html
@@ -2,15 +2,15 @@
     <div class="row">
         <div class="col-md-6 col-sm-6 col-xs-6">
 {if $member}
-            <a class="btn btn-link" href="{function.url('member/index')}">个人中心</a>
-            <a class="btn btn-link" href="{function.url('member/login/out')}">退出</a>
+            <a class="btn btn-success" href="{function.url('member/index')}">个人中心</a>
+            <a class="btn btn-default" href="{function.url('member/login/out')}">退出</a>
 {else}
-            <a class="btn btn-link" href="{function.url('member/login')}">会员登录</a>
-            <a class="btn btn-link" href="{function.url('member/register')}">免费注册</a>
+            <a class="btn btn-default" href="{function.url('member/login')}">会员登录</a>
+            <a class="btn btn-default" href="{function.url('member/register')}">免费注册</a>
 {/if}
         </div>
         <div class="col-md-6 col-sm-6 col-xs-6 text-right">
-            <a class="btn btn-default" href="{function.url('member/content/add', array('catid'=>$catid))}">发帖</a>
+            <a class="btn btn-primary" href="{function.url('member/content/add', array('catid'=>$catid))}">发帖</a>
         </div>
     </div>
 </div>
