--- a/data/theme/bootstrap/member/password.html
+++ b/data/theme/bootstrap/member/password.html
@@ -2,33 +2,34 @@
 {template member/member_nav.html}
 
 <div class="row">
-    <div class="col-sm-3 col-md-3 col-xs-3">
+    <div class="col-sm-3 col-md-3 col-xs-4">
         {template member/sidebar.html}
     </div>
-    <div class="col-sm-8 col-md-8 col-xs-8">
-        <form action="" method="post">
-            <table width="100%" class="table_form ">
+    <div class="col-sm-9 col-md-9 col-xs-8">
+        <form class="form" action="" method="post">
+            <table class="table table-bordered">
                 <tbody>
                     <tr>
-                        <th width="100">会员名称：</th>
-                        <td>{$member['username']}</td>
+                        <th colspan="2" class="text-center">修改密码（当前账号：{$member['username']}）</th>
                     </tr>
                     <tr>
-                        <th>原密码：</th>
-                        <td><input name="data[password1]" type="password" class="input-text" value="" /></td>
+                        <th width="100">当前密码：</th>
+                        <td><input name="data[password1]" type="password" class="form-control" value="" /></td>
                     </tr>
                     <tr>
-                        <th>新密码：</th>
-                        <td><input name="data[password2]" type="password" class="input-text" value="" /></td>
+                        <th>新的密码：</th>
+                        <td><input name="data[password2]" type="password" class="form-control" value="" /></td>
                     </tr>
                     <tr>
                         <th>确认密码：</th>
-                        <td><input name="data[password3]" type="password" class="input-text" value="" /></td>
+                        <td><input name="data[password3]" type="password" class="form-control" value="" /></td>
                     </tr>
                     <tr>
                         <tr>
-                            <th style="border:none">&nbsp;</th>
-                            <td style="border:none"><input type="submit" class="button" value="保 存" name="submit"></td>
+                            <th>&nbsp;</th>
+                            <td>
+                                <button type="submit" class="btn btn-default" name="submit">保存</button>
+                            </td>
                         </tr>
                 </tbody>
             </table>
