--- a/data/theme/bootstrap/member/login.html
+++ b/data/theme/bootstrap/member/login.html
@@ -12,13 +12,13 @@
     <div class="form-group form-inline">
         <label class="col-sm-2 control-label" for="username"><font color="red">*</font>登录会员：</label>
         <div class="col-sm-10">
-            <input class="form-control" type="text" name="data[username]" tabindex="1" autocomplete="off" placeholder="登陆账号" autofocus />
+            <input class="form-control" type="text" name="data[username]" tabindex="1" placeholder="登陆账号" autofocus />
         </div>
     </div>
     <div class="form-group form-inline">
         <label class="col-sm-2 control-label" for="password"><font color="red">*</font>密码：</label>
         <div class="col-sm-10">
-            <input class="form-control" type="password" name="data[password]" tabindex="2" placeholder="账号密码" autocomplete="off" />
+            <input class="form-control" type="password" name="data[password]" tabindex="2" placeholder="账号密码" />
         </div>
     </div>
 {if $config['MEMBER_LOGINCODE']}
